--- a/index.html
+++ b/index.html
@@ -798,19 +798,16 @@
             <img src="error-3.png">
         </section>
 
-        <!--<section data-background-image="bg.png">
-            <img src="string-rust-vs-php.jpg" alt="" style="max-width: 700px">
-        </section>
-
         <section data-background-image="bg.png">
-            <img src="string-php-vs-java.jpg" alt="" style="max-width: 700px">
-        </section>-->
-
-        <!--<section data-background-image="bg.png">
             <h3>Спасибо за внимание!</h3>
             <img style="width: 45%;" src="qr.png" alt="QR code">
-            <p><a href="https://t.me/vudaltsov">@vudaltsov</a> / <a href="https://t.me/phpyh">Пых</a> / <a href="https://youtube.com/@PHPPoint">PHP Point</a></p>
-        </section>-->
+            <p>
+                <a href="https://t.me/vudaltsov">@vudaltsov</a> /
+                <a href="https://t.me/phpyh">Пых</a> /
+                <a href="https://youtube.com/@PHPPoint">PHP Point</a> /
+                <a href="https://t.me/isPHPdying">PHP умирает?!</a>
+            </p>
+        </section>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.0.4/reveal.js"></script>
