Added slide with links

--- a/index.html
+++ b/index.html
@@ -835,6 +835,19 @@
         </section>
 
         <section>
+            <h3>Полезные материалы</h3>
+            <ul>
+                <li><a href="http://lucacardelli.name/Papers/OnUnderstanding.A4.pdf">On Understanding Types, Data Abstraction, and Polymorphism (Luca Cardelli)</a></li>
+                <li><a href="https://youtube.com/watch?v=RABzYje2d2A&t=1362s">Data types, Signatures, and Polymorphism (курс по Haskell)</a></li>
+                <li><a href="https://scg.unibe.ch/download/lectures/pl/PL-04TypesAndPolymorphism.pdf">Types and Polymorphism (слайды лекции)</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Liskov_substitution_principle">Liskov substitution principle (Wikipedia)</a></li>
+                <li><a href="https://kotlinlang.org/docs/generics.html">Generics: in, out, where (Kotlin)</a></li>
+                <li><a href="https://phpstan.org/blog/whats-up-with-template-covariant">What’s Up With @template-covariant? (PHPStan)</a></li>
+                <li><a href="https://phpstan.org/blog/guide-to-call-site-generic-variance">A guide to call-site generic variance (PHPStan)</a></li>
+            </ul>
+        </section>
+
+        <section>
             <h3>Спасибо за внимание!</h3>
             <img style="width: 45%;" src="qr.png" alt="QR code">
             <p>
