Smaller qr code

--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
 
         <section>
             <h3>Спасибо за внимание!</h3>
-            <img style="width: 45%;" src="qr.png" alt="QR code">
+            <img style="max-width: 40%;" src="qr.png" alt="QR code">
             <p>
                 <a href="https://t.me/vudaltsov">@vudaltsov</a> /
                 <a href="https://t.me/phpyh">Пых</a> /
